--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "inote",
+  "name": "nodepad",
   "version": "0.1.0",
   "private": true,
+  
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@testing-library/jest-dom": "^5.17.0",
