--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "nodepad",
   "version": "0.1.0",
   "private": true,
-  
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@testing-library/jest-dom": "^5.17.0",
@@ -13,6 +12,8 @@
     "lucide-react": "^0.279.0",
     "nodemon": "^1.3.6",
     "react": "^18.2.0",
+    "react-alert": "^7.0.3",
+    "react-alert-template-basic": "^1.0.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.16.0",
